doc: add README.md